--- a/CasinoDealer2/Views/Home/Index.cshtml
+++ b/CasinoDealer2/Views/Home/Index.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">BlackJack</h5>
+                    <p class="card-text">Тренировки по BlackJack</p>
+                    <a asp-controller="BlackJack" asp-action="BlackJackQuestion" class="btn btn-primary">Тренироваться</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
