Add Roulette Controller

--- a/CasinoDealer2/Views/Home/Index.cshtml
+++ b/CasinoDealer2/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="container">
+
     <div class="row">
         <div class="col-md-4">
             <div class="card">
@@ -13,5 +14,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Roulette</h5>
+                    <p class="card-text">Тренировки по Roulette</p>
+                    <a asp-controller="Roulette" asp-action="RouletteQuestion" class="btn btn-primary">Тренироваться</a>
+                </div>
+            </div>
+        </div>
     </div>
+
 </div>
