--- a/CasinoDealer2/Views/_ViewImports.cshtml
+++ b/CasinoDealer2/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using CasinoDealer2
 @using CasinoDealer2.Models
+
+@using CasinoDealer2.Models.QuestionModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
