--- a/CasinoDealer2/Views/Home/Index.cshtml
+++ b/CasinoDealer2/Views/Home/Index.cshtml
@@ -24,6 +24,17 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Craps</h5>
+                    <p class="card-text">Тренировки по Craps</p>
+                    <a asp-controller="Craps" asp-action="CrapsQuestion" class="btn btn-primary">Тренироваться</a>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
