--- a/CasinoDealer2/Views/Roulette/RouletteQuestion.cshtml
+++ b/CasinoDealer2/Views/Roulette/RouletteQuestion.cshtml
@@ -13,6 +13,7 @@
                 <input type="hidden" asp-for="IsCorrect" />
                 <input type="hidden" asp-for="IncorrectStreak" />
                 <input type="hidden" asp-for="QuestionText" />
+                <input type="hidden" asp-for="GameType" />
 
                 <div class="form-group">
                     <p>@Model.QuestionText</p>
