--- a/CasinoDealer2/Views/Home/Index.cshtml
+++ b/CasinoDealer2/Views/Home/Index.cshtml
@@ -37,4 +37,36 @@
         </div>
     </div>
 
+    <div class="row mt-4">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">BlackJack Tournament</h5>
+                    <p class="card-text">BlackJack Tournament</p>
+                    <a asp-controller="BlackJack" asp-action="CreateBlackJackTournamentRecord" class="btn btn-primary">Enter the tournament</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Roulette Advanced</h5>
+                    <p class="card-text">Тренировки по Roulette для продвинутых</p>
+                    <a asp-controller="Roulette" asp-action="RouletteAdvancedQuestion" class="btn btn-primary">Тренироваться</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Craps Advanced</h5>
+                    <p class="card-text">Тренировки по Craps для продвинутых</p>
+                    <a asp-controller="Craps" asp-action="CrapsAdvancedQuestion" class="btn btn-primary">Тренироваться</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
