--- a/CasinoDealer2/Views/Home/Index.cshtml
+++ b/CasinoDealer2/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">BlackJack Tournament</h5>
-                    <p class="card-text">BlackJack Tournament</p>
+                    <p class="card-text small">Compete against personal record and other players</p>
                     <a asp-controller="BlackJack" asp-action="CreateBlackJackTournamentRecord" class="btn btn-primary">Enter the tournament</a>
                 </div>
             </div>
