Add Implementation to show Personal Record

--- a/CasinoDealer2/Views/BlackJack/BlackJackTournamentQuestion.cshtml
+++ b/CasinoDealer2/Views/BlackJack/BlackJackTournamentQuestion.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "BlackJackTournamentQuestion";
     int currentStreak = ViewBag.CurrentStreak != null ? (int)ViewBag.CurrentStreak : 0;
-    int longestStreak = ViewBag.LongestStreak != null ? (int)ViewBag.LongestStreak : 0;
+    int longestStreak = ViewBag.PersonalRecord != null ? (int)ViewBag.PersonalRecord : 0;
 }
 
 <div class="container" style="min-height: 100vh;">
