--- a/CasinoDealer2/Views/Roulette/RouletteQuestion.cshtml
+++ b/CasinoDealer2/Views/Roulette/RouletteQuestion.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container" style="min-height: 100vh;">
     <div>
-        <h1 class="card-title text-center">BlackJack</h1>
+        <h1 class="card-title text-center">Roulette training</h1>
     </div>
 
     <div class="card w-100 mx-auto mb-3">
