--- a/CasinoDealer2/Views/Roulette/RouletteQuestion.cshtml
+++ b/CasinoDealer2/Views/Roulette/RouletteQuestion.cshtml
@@ -13,77 +13,84 @@
         <div class="card-body">
             <form asp-action="UpdateSettings" method="post" class="d-flex align-items-center justify-content-center">
 
-                <div class="form-group mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.MinBet" class="mr-2">Min</label>
-                    <select asp-for="SettingsAR.MinBet" id="minBet" class="form-control" style="max-width: 80px">
-                        <option value="1">1</option>
-                        <option value="5">5</option>
-                        <option value="10">10</option>
-                        <option value="15">15</option>
-                        <option value="20">20</option>
-                        <option value="25">25</option>
-                        <option value="50">50</option>
-                        <option value="100">100</option>
-                        <option value="200">200</option>
-                        <option value="300">300</option>
-                        <option value="500">500</option>
-                        <option value="1000">1000</option>
-                    </select>
+                <div class="d-flex">
+                    <div class="form-group mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.MinBet" class="mr-2">Min</label>
+                        <select asp-for="SettingsAR.MinBet" id="minBet" class="form-control" style="max-width: 80px">
+                            <option value="1">1</option>
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                            <option value="20">20</option>
+                            <option value="25">25</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                            <option value="200">200</option>
+                            <option value="300">300</option>
+                            <option value="500">500</option>
+                            <option value="1000">1000</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.MaxBet" class="mr-2">Max</label>
+                        <select asp-for="SettingsAR.MaxBet" id="maxBet" class="form-control" style="max-width: 80px">
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="20">20</option>
+                            <option value="25">25</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                            <option value="200">200</option>
+                            <option value="300">300</option>
+                            <option value="400">400</option>
+                            <option value="500">500</option>
+                            <option value="1000">1.000</option>
+                            <option value="2000">2.000</option>
+                            <option value="5000">5.000</option>
+                            <option value="10000">10.000</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.Increment" class="mr-2">Step</label>
+                        <select asp-for="SettingsAR.Increment" class="form-control" style="max-width: 80px">
+                            <option value="1">1</option>
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="25">25</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                            <option value="500">500</option>
+                        </select>
+                    </div>
+                </div>
+                
+                <div>
+
+                    <div class="form-check mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.IsStraightUp" class="form-check-label mr-2">StraightUp</label>
+                        <input asp-for="SettingsAR.IsStraightUp" type="checkbox" class="form-check-input" />
+                    </div>
+                    <div class="form-check mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.IsSplit" class="form-check-label mr-2">Split</label>
+                        <input asp-for="SettingsAR.IsSplit" type="checkbox" class="form-check-input" />
+                    </div>
+                    <div class="form-check mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.IsCorner" class="form-check-label mr-2">Corner</label>
+                        <input asp-for="SettingsAR.IsCorner" type="checkbox" class="form-check-input" />
+                    </div>
+                    <div class="form-check mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.IsStreet" class="form-check-label mr-2">Street</label>
+                        <input asp-for="SettingsAR.IsStreet" type="checkbox" class="form-check-input" />
+                    </div>
+                    <div class="form-check mr-2 d-flex align-items-center">
+                        <label asp-for="SettingsAR.IsSixline" class="form-check-label mr-2">Sixline</label>
+                        <input asp-for="SettingsAR.IsSixline" type="checkbox" class="form-check-input" />
+                    </div>
+
                 </div>
 
-                <div class="form-group mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.MaxBet" class="mr-2">Max</label>
-                    <select asp-for="SettingsAR.MaxBet" id="maxBet" class="form-control" style="max-width: 80px">
-                        <option value="5">5</option>
-                        <option value="10">10</option>
-                        <option value="20">20</option>
-                        <option value="25">25</option>
-                        <option value="50">50</option>
-                        <option value="100">100</option>
-                        <option value="200">200</option>
-                        <option value="300">300</option>
-                        <option value="400">400</option>
-                        <option value="500">500</option>
-                        <option value="1000">1.000</option>
-                        <option value="2000">2.000</option>
-                        <option value="5000">5.000</option>
-                        <option value="10000">10.000</option>
-                    </select>
-                </div>
-
-                <div class="form-group mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.Increment" class="mr-2">Step</label>
-                    <select asp-for="SettingsAR.Increment" class="form-control" style="max-width: 80px">
-                        <option value="1">1</option>
-                        <option value="5">5</option>
-                        <option value="10">10</option>
-                        <option value="25">25</option>
-                        <option value="50">50</option>
-                        <option value="100">100</option>
-                        <option value="500">500</option>
-                    </select>
-                </div>
-
-                <div class="form-check mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.IsStraightUp" class="form-check-label mr-2">StraightUp</label>
-                    <input asp-for="SettingsAR.IsStraightUp" type="checkbox" class="form-check-input" />
-                </div>
-                <div class="form-check mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.IsSplit" class="form-check-label mr-2">Split</label>
-                    <input asp-for="SettingsAR.IsSplit" type="checkbox" class="form-check-input" />
-                </div>
-                <div class="form-check mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.IsCorner" class="form-check-label mr-2">Corner</label>
-                    <input asp-for="SettingsAR.IsCorner" type="checkbox" class="form-check-input" />
-                </div>
-                <div class="form-check mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.IsStreet" class="form-check-label mr-2">Street</label>
-                    <input asp-for="SettingsAR.IsStreet" type="checkbox" class="form-check-input" />
-                </div>
-                <div class="form-check mr-2 d-flex align-items-center">
-                    <label asp-for="SettingsAR.IsSixline" class="form-check-label mr-2">Sixline</label>
-                    <input asp-for="SettingsAR.IsSixline" type="checkbox" class="form-check-input" />
-                </div>
 
                 <div class="form-group mr-2 d-flex align-items-center">
                     <button type="submit" class="btn btn-primary">Save</button>
@@ -153,43 +160,45 @@
         document.getElementById('nextButton').style.display = 'block';
     }
 
-    // // min-max implementation
-    // document.getElementById('minBet').addEventListener('change', function () {
-    //     var minBet = parseInt(this.value);
-    //     var maxBetSelect = document.getElementById('maxBet');
+    // min-max implementation
+    document.getElementById('minBet').addEventListener('change', function () {
+        var minBet = parseInt(this.value);
+        var maxBetSelect = document.getElementById('maxBet');
 
-    //     console.log('Min Bet changed:', minBet);
+        console.log('Min Bet changed:', minBet);
 
-    //     // Define possible maxBet options
-    //     var maxBetOptions = [100, 200, 300, 400, 500, 1000, 2000, 5000, 10000];
+        // Define possible maxBet options
+        var maxBetOptions = [100, 200, 300, 400, 500, 1000, 2000, 5000, 10000];
 
-    //     // Clear existing options
-    //     maxBetSelect.innerHTML = '';
+        // Clear existing options
+        maxBetSelect.innerHTML = '';
 
-    //     // Add new options based on minBet
-    //     maxBetOptions.forEach(function (value) {
-    //         if (value >= minBet) {
-    //             var option = document.createElement('option');
-    //             option.value = value;
-    //             option.text = value;
-    //             maxBetSelect.appendChild(option);
-    //         }
-    //     });
+        // Add new options based on minBet
+        maxBetOptions.forEach(function (value) {
+            if (value >= minBet) {
+                var option = document.createElement('option');
+                option.value = value;
+                option.text = value;
+                maxBetSelect.appendChild(option);
+            }
+        });
 
-    //     // setting specific maxBet value based on minBet
-    //     if (minBet === 100) {
-    //         maxBetSelect.value = 2000;
-    //     } else if (minBet === 200) {
-    //         maxBetSelect.value = 2000;
-    //     } else if (minBet === 500) {
-    //         maxBetSelect.value = 5000;
-    //     } else {
-    //         // setting maxBet value to the first valid option if no specific match
-    //         maxBetSelect.value = maxBetOptions.find(value => value >= minBet);
-    //     }
+        // setting specific maxBet value based on minBet
+        if (minBet === 100) {
+            maxBetSelect.value = 2000;
+        } else if (minBet === 200) {
+            maxBetSelect.value = 2000;
+        } else if (minBet === 300) {
+            maxBetSelect.value = 2000;
+        } else if (minBet === 500) {
+            maxBetSelect.value = 5000;
+        } else {
+            // setting maxBet value to the first valid option if no specific match
+            maxBetSelect.value = maxBetOptions.find(value => value >= minBet);
+        }
 
-    //     console.log('Max Bet options updated:', maxBetSelect.innerHTML);
-    // });
+        console.log('Max Bet options updated:', maxBetSelect.innerHTML);
+    });
 </script>
 
 <style>
